testsuite/tests/parsing/pr6865.compilers.reference
[
  structure_item (pr6865.ml[9,168+0]..[9,168+14]) ghost
    Pstr_extension "foo"
    [
      structure_item (pr6865.ml[9,168+0]..[9,168+14])
        Pstr_value Nonrec
        [
          <def>
            pattern (pr6865.ml[9,168+8]..[9,168+9])
              Ppat_var "x" (pr6865.ml[9,168+8]..[9,168+9])
            expression (pr6865.ml[9,168+12]..[9,168+14])
              Pexp_constant PConst_int (42,None)
        ]
    ]
  structure_item (pr6865.ml[11,184+0]..[13,200+10]) ghost
    Pstr_extension "foo"
    [
      structure_item (pr6865.ml[11,184+0]..[13,200+10])
        Pstr_value Nonrec
        [
          <def>
            pattern (pr6865.ml[11,184+8]..[11,184+9])
              Ppat_any
            expression (pr6865.ml[11,184+12]..[11,184+14])
              Pexp_construct "()" (pr6865.ml[11,184+12]..[11,184+14])
              None
          <def>
            pattern (pr6865.ml[13,200+4]..[13,200+5])
              Ppat_any
            expression (pr6865.ml[13,200+8]..[13,200+10])
              Pexp_construct "()" (pr6865.ml[13,200+8]..[13,200+10])
              None
        ]
    ]
  structure_item (pr6865.ml[15,212+0]..[15,212+14]) ghost
    Pstr_extension "foo"
    [
      structure_item (pr6865.ml[15,212+0]..[15,212+14])
        Pstr_value Nonrec
        [
          <def>
            pattern (pr6865.ml[15,212+8]..[15,212+9])
              Ppat_any
            expression (pr6865.ml[15,212+12]..[15,212+14])
              Pexp_construct "()" (pr6865.ml[15,212+12]..[15,212+14])
              None
        ]
    ]
]

File "pr6865.ml", line 9, characters 4-7:
9 | let%foo x = 42
        ^^^
Error: Uninterpreted extension 'foo'.
